Mobile Tap fix and Mozilla Scrollbar Hidden

--- a/style.css
+++ b/style.css
@@ -13,12 +13,15 @@
     box-sizing: border-box;
     /* font-family: 'Jost'; */
     font-family: 'MuseoModerno';
+    -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
 }
 
 h1 , p , h2 , ul {
     margin: 0;
     padding: 0;
 }
+
+
 
 body{
     margin: 0;
@@ -126,8 +129,12 @@ body > .todo-task-cover{
     transform: scaleY(0) ;
 }
 
-.addTaskScreen::-webkit-scrollbar , .todoTaskScreen::-webkit-scrollbar {
+.addTaskScreen::-webkit-scrollbar , .todoTaskScreen::-webkit-scrollbar  {
     display: none;
+}
+
+.addTaskScreen , .todoTaskScreen {
+    scrollbar-width: none ;
 }
 
 .addTaskForm {
